# assemblyai-python-sdk

./: .pre-commit-config.yaml  CLAUDE.md  README.md  ruff.toml  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
assemblyai/: __init__.py  __version__.py  api.py  client.py  extras.py  lemur.py  sync.py  sync_api.py  transcriber.py  types.py
assemblyai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assemblyai/streaming/v3/: __init__.py  _base.py  async_client.py  client.py  extras.py  models.py
assemblyai/sync/: __init__.py
assemblyai/sync/v1/: __init__.py  _base.py  api.py  client.py
tests/unit/: BUILD.bazel  conftest.py  factories.py  test_auto_chapters.py  test_auto_highlights.py  test_client.py  test_config.py  test_content_safety.py  test_custom_spelling.py  test_domains.py  test_entity_detection.py  test_extras.py  test_iab_categories.py  test_imports.py  test_language_detection_options.py  test_lemur.py  test_multichannel.py  test_realtime_transcriber.py  test_redact_pii.py  test_sentiment_analysis.py  test_settings.py  test_speaker_identification.py  test_speaker_options.py  test_streaming.py  test_streaming_async.py  test_streaming_dual_channel.py  test_summarization.py  test_sync.py  test_sync_backwards_compat.py  test_transcriber.py  test_transcript.py  test_transcript_group.py  unit_test_utils.py
